Deleting graph.ipynb and updating GPT-2 finetune with necessary data.

--- a/GPT-2 finetune.ipynb
+++ b/GPT-2 finetune.ipynb
@@ -32,10 +32,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "extended-tennessee",
+   "metadata": {},
+   "source": [
+    "# Finetuning GPT-2 with the help of topological loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "purple-stuff",
+   "metadata": {},
+   "source": [
+    "This notebook is an example of GPT-2 finetuning process on  [ShortJokes](https://www.kaggle.com/abhinavmoudgil95/short-jokes) dataset with the help of topological head-wise loss."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "steady-shell",
+   "metadata": {},
+   "source": [
+    "Our topological feature (analogue to H0s, the sum of weights of maximum spanning tree, or the sum of lengths of barcodes in H0) is the normalized sum of weights above some threshold:\n",
+    "\n",
+    "$$f = \\frac{1}{n^2} \\sum_{i, j = 1}^n W_{ij} \\mathbb{1}[W_{ij} > t]$$\n",
+    "\n",
+    "The total topological loss is defined as the mean squared difference between the generated and natural samples:\n",
+    "\n",
+    "$$ L_{\\text{Top}} = \\frac{1}{\\text{batch_size}}\\sum_{i=1}^{\\text{batch_size}} (f^n_i - f^g_i)^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "sorted-graphic",
    "metadata": {},
    "source": [
-    "# Model loading"
+    "### Model loading"
    ]
   },
   {
@@ -48,13 +78,14 @@
     "model_id = \"gpt2\"\n",
     "device = \"cuda:1\"\n",
     "\n",
+    "# To avoid OOM, let's parallelize the model on 4 GPUs\n",
     "device_map = {\n",
     "    1: [0, 1, 2],\n",
     "    2: [3, 4, 5],\n",
     "    3: [6, 7, 8],\n",
     "    4: [9, 10, 11]\n",
     "}\n",
-    "\n",
+    "# Let's load model\n",
     "tokenizer = GPT2Tokenizer.from_pretrained(model_id)\n",
     "model = GPT2LMHeadModel.from_pretrained(model_id)"
    ]
@@ -74,6 +105,7 @@
     }
    ],
    "source": [
+    "# Let's count the number of parameters of the model\n",
     "count_parameters(model)"
    ]
   },
@@ -105,6 +137,7 @@
     }
    ],
    "source": [
+    "# Let's add special tokens to the tokenizer and also to the model token embeddings.\n",
     "special_tokens = {\n",
     "    'pad_token': '<|padtoken|>',\n",
     "    'unk_token': '<|unknowntoken|>'\n",
@@ -118,7 +151,7 @@
    "id": "arranged-starter",
    "metadata": {},
    "source": [
-    "# Dataset"
+    "## Dataset"
    ]
   },
   {
@@ -126,7 +159,7 @@
    "id": "korean-receiver",
    "metadata": {},
    "source": [
-    "## ShortJokes"
+    "### ShortJokes"
    ]
   },
   {
@@ -134,7 +167,7 @@
    "id": "surprised-desert",
    "metadata": {},
    "source": [
-    "Dataset link: https://www.kaggle.com/abhinavmoudgil95/short-jokes"
+    "Downloading data and creating a train-val-test (80%/10%/10%) split."
    ]
   },
   {
@@ -277,6 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading the data and preprocessing it\n",
     "def jokes_collate_fn(batch):\n",
     "    batch_encoded = tokenizer.batch_encode_plus(\n",
     "        batch,\n",
@@ -306,7 +340,7 @@
    "id": "equal-overhead",
    "metadata": {},
    "source": [
-    "## Training the model"
+    "### Training the model"
    ]
   },
   {
@@ -1578,30 +1612,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "viral-account",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ignored-centre",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "after-christopher",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "peripheral-logic",
    "metadata": {},
@@ -2196,16 +2206,8 @@
    "id": "everyday-formation",
    "metadata": {},
    "source": [
-    "## Generate examples"
+    "### Generating sentences"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "elegant-listing",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2316,7 +2318,15 @@
    "id": "powerful-warner",
    "metadata": {},
    "source": [
-    "## Distributions plot"
+    "### Distributions plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sufficient-examination",
+   "metadata": {},
+   "source": [
+    "Creating gifs from distribution plots obtained during training."
    ]
   },
   {
@@ -2407,94 +2417,6 @@
     "        ]\n",
     "        imageio.mimsave(f'logs/jokes/with_toploss/gifs/l{layer}_h{head}.gif', images, duration=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "still-patrol",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "verified-owner",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "intimate-playlist",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "assumed-subdivision",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "macro-legislation",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "supposed-edgar",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "focal-fusion",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "distinguished-forty",
-   "metadata": {},
-   "source": [
-    "## SLOR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "offensive-electricity",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "atomic-cassette",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "nominated-aging",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
